<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Reccon</string>

    <!-- Setting -->
    <string name="require">¡Importante! Para que RECCON funcione correctamente, asegúrate de proporcionar los precios por kilogramo recolectado. ¡Optimiza tu contabilidad cafetera con nosotros!</string>
    <string name="yesFeeding">Precio por kilo con alimentación</string>
    <string name="notFeeding">Precio por kilo sin alimentación</string>
    <string name="todoExit">Volver al módulo de configuración</string>
    <string name="settingsAliment">Configuración de precios</string>
    <string name="todo">Ver todos los precios anteriores</string>
    <string name="recolector">Recolector(a)</string>
    <string name="price">$</string>
    <string name="priceTitle">Precios</string>

    <!-- Informers -->
    <string name="report">Informe</string>
    <string name="descriptionReport">Obtén una visión completa de tu producción cafetera y toma decisiones informadas para el éxito de tu negocio.</string>
    <string name="userInfo">Selecciona una fecha en el calendario de recolección para generar un informe detallado de ese día</string>
    <string name="calendarCollection">Calendario de recolección</string>
    <string name="pdf">Informes en PDF</string>

    <!-- Recoleccion -->
    <string name="collection">Recolección</string>
    <string name="descriptionCollection">Registra cada detalle y mantén un control preciso de tu actividad cafetera. ¡Optimiza tus procesos y maximiza tu productividad!</string>
    <string name="deleteCollection">¿Estás seguro de que deseas eliminar este recolector?</string>
    <string name="finish_collection">¡Recolección finalizada!</string>
    <string name="tvRecolection">Total recolectado:</string>
    <string name="hintUser">Nombre del Recolector</string>
    <string name="tvPriceTotal">Total a Pagar:</string>
    <string name="priceCollection">Ganado</string>
    <string name="collected">pesa</string>
    <string name="tvKg">216 Kg</string>

    <!-- txt del alert -->
    <string name="addUser">¡Comienza a gestionar tu equipo de recolectores de manera eficiente y sin complicaciones!</string>
    <string name="readyAddRecolector">Recolector</string>
    <string name="save">Guardado</string>

    <string name="welcome">¡Bienvenido a RECCON, la aplicación que revolucionará la contabilidad de la recolección de café! Diseñada pensando en los productores, nuestro objetivo es simplificar tus procesos y brindarte un manejo sencillo. Surgimos en el corazón del campo, enfocados en potenciar el desarrollo tecnologico del sector agrario. ¡Únete a nuestra comunidad y descubre una nueva forma de llevar tu contabilidad cafetera!</string>
    <string name="requireDates">Por favor, completa la información para continuar. ¡Gracias!</string>
    <string name="go">Presiona el botón \"Empecemos\" para comenzar. ¡Estamos emocionados de tener a bordo!</string>
    <string name="hello">Hello</string>
    <string name="txtCancel">Cerrar</string>
    <string name="txtImage">Imagen</string>
    <string name="support">Ayuda</string>
    <string name="assistant">Asistente de voz</string>
    <string name="txtErrorOpen">No se encontro una aplicación para abrir el Informe generado, se recomienda Instalar una aplicación para leer archivos PDF.</string>
    <string name="txtCloseAssistant">Desactivar el asistente</string>

    <!-- txt Alert Message -->
    <string name="txtRecolectionFull">¡Recolección completada con éxito!</string>
    <string name="txtNewReport">Generar nuevo informe.</string>
    <string name="txtCalendar">Explorar calendario recolección.</string>
    <string name="txtGoReport">Ir a informes</string>
    <string name="txtReturnMenu">Volver a inicio</string>
    <string name="txtMessageOne">1 - Inicia una nueva recoleccion</string>
    <string name="txtMessageTwo">2 - Registra todo tu equipo de recolectores</string>
    <string name="txtRecolectionStart">Iniciar la recoleccion</string>
    <string name="txtSelectAliment">Indique la alimentacion</string>
    <string name="txtMessageOneInstall">1 - Abre la tienda de aplicaiones</string>
    <string name="txtMessageTwoInstall">2 - Instala un lector PDF de tu preferencia</string>

    <!-- Year information -->
    <string name="year" tools:ignore="Typos">Anual</string>
    <string name="totalInfoYear">Información Total:</string>
    <string name="IYear" tools:ignore="Typos">Informe anual</string>
    <string name="IYearDescription">Utiliza este informe para tomar decisiones informadas y maximizar tu éxito en el sector cafetero.</string>
    <string name="titlePdfYear" tools:ignore="Typos">Bienvenido a al Informe Anual sobre la Administración de la Recolección de Café!</string>
    <string name="yearLoadingPdf" tools:ignore="Typos">Generando tu informe Anual de recolección cafetera. ¡Gracias por tu paciencia, valdrá la pena la espera!</string>
    <string name="infoPdfYear">Información de los Precios establecidos durante el Año del  </string>
    <string name="infoPdfYearRecolection">Información de lo recolectado durante el Año </string>

    <!-- Week information -->
    <string name="week">Semanal</string>
    <string name="IWeek">Informe semanal</string>
    <string name="IWeekDescription">Obtén una visión precisa de tu producción semanal y toma decisiones estratégicas para optimizar tu cultivo.</string>
    <string name="weekLoadingPdf">Generando tu informe Semanal de recolección cafetera. ¡Gracias por tu paciencia, valdrá la pena la espera!</string>
    <string name="titlePdfWeek">¡Bienvenido a los Informes Semanales sobre Administración de la Recolección de Café!</string>
    <string name="txtPdfWeek">Resumen Semanal de los precios de la Alimentación</string>

    <!-- Month information -->
    <string name="month">Mensual</string>
    <string name="IMonth">Informe mensual</string>
    <string name="IMonthDescription">Analiza datos como la productividad y los costos mensuales de la recolección de cafe.</string>
    <string name="monthLoadingPdf">Generando tu informe Mensual de recolección cafetera. ¡Gracias por tu paciencia, valdrá la pena la espera!</string>
    <string name="titlePdfMonth">¡Bienvenido a los Informes Mesuales sobre Administración de la Recolección de Café!</string>
    <string name="txtPdfMonth">Resumen Mensual de los precios de la Alimentación de </string>
    <string name="infoPdfMonth">Información de lo recolectado durante el Mes de </string>

    <!-- Recursos del Pdf -->
    <string name="actualPrice">Precios vigentes</string>
    <string name="previousPrice">Precios Anteriores</string>
    <string name="notAliment">Recolección sin alimentación</string>
    <string name="yesAliment">Recolección con alimentación</string>
    <string name="aliment">Alimentación</string>
    <string name="txtNotFeding">Sin Alimentación</string>
    <string name="stateActive">Trabajando</string>
    <string name="stateArchive">Descansando</string>
    <string name="name">Nombre</string>
    <string name="recolection">Recolectado</string>
    <string name="totalPrince">Total Pagado</string>
    <string name="total">Total</string>
    <string name="state">Estado</string>
    <string name="princeTotal">Precio</string>
    <string name="valorTotal">Valor Pagado: </string>
    <string name="pdfFinish">Con cada semana de recolección, avanzamos hacia la excelencia en nuestra producción cafetera. ¡Sigamos cosechando éxitos juntos!</string>

    <!-- Botones -->
    <string name="btnAccept">Aceptar</string>
    <string name="btnFinish">Cancelar</string>
    <string name="btnAdd">Insertar</string>
    <string name="btnOpenShop">Ir a la Play Store</string>
    <string name="btnAddRecolector">Añadir Recolector</string>
    <string name="ready">Listo</string>
    <string name="Init">Empecemos</string>
    <string name="update">Actualizar</string>
    <string name="create">Generar</string>
    <string name="collectionCancel">Pagar recolección</string>
    <string name="collectors">Recolectores</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="finish">Finalizar</string>
    <string name="read">leer</string>

    <string name="cvKg">Informacion de Recoleccion</string>
    <string name="collect">Recoleccion</string>
    <string name="txtNotPermissions">No tienes permiso para abrir el PDF</string>

    <string name="kgRecolectados">Añadir una Recolección</string>
    <string name="addCollection">¡Optimiza tu contabilidad y lleva un registro detallado de cada recolección!</string>

    <string name="requireCollectors">¡Solo con un equipo completo podremos lograr una recolección exitosa!</string>
    <string name="updateName">Cambiar nombre de recolector</string>

    <string name="updateFinish">¡Recolección actualizada con éxito!</string>
    <string name="addCollectionFinish">\¡Nueva recolección agregada! </string>
    <string name="help">Tienes una pregunta? ¡Estamos aquí para ayudarte! Escríbenos en WhatsApp de soporte</string>
    <string name="chat">¡Conversemos en WhatsApp!</string>
    <string name="informed">Calendario de recoleccion</string>
    <string name="informedTitle">Informe rápido</string>
    <string name="informedTitlePdf">Informe en PDF</string>

    <!-- Dialog assistant -->
    <string name="assistantWelcome">¡Bienvenido a Reccon, soy tu asistente de confianza en la gestión de la recolección de café! Si mi ayuda no es necesaria, puedes suspender esta función en el módulo principal… para continuar Presiona el botón “Empecemos”</string>
    <string name="assistantRequire">¡Importante! Para que Reccon funcione correctamente, asegúrate de proporcionar los precios por kilogramo recolectado… y Luego presiona el botón "listo"</string>
    <string name="assistantAddCollection">Ingresa los kilos recolectados de name y selecciona la alimentación</string>
    <string name="assistantAddCollector">Ingresa el nombre del recolector y presiona el botón "añadir recolector"</string>
    <string name="assistantCancelCollection">Recolección de</string>
    <string name="assistantCancelCollectionTotal">Total a pagar</string>
    <string name="deleteCollector">Recolector eliminado</string>
    <string name="collectionCanceled">Recolección pagada</string>
    <string name="editNameReady">Nombre actualizado</string>
    <string name="settingsUpdate">Nuevo precio guardado</string>

    <string name="txtOnAssistant">Activar el assistente</string>
    <string name="txtOffAssistant">Desactivar el assistente</string>
    <string name="txtActiveAssistant">Assistente activado</string>
    <string name="txtStartAssistant">Iniciando el assitente</string>

    <!-- Historial De Pdf -->
    <string name="titleHistory">Informes Generados</string>
    <string name="txtHistory">Historial de Pdf</string>
    <string name="ReportType">Tipo de Informe: </string>
    <string name="ReportDateGenerate">Fecha Generada: </string>
    <string name="assistantClose">Presiona aquí para desactivar el asistente</string>
    <string name="checkAliment">¡Verifica la precisión de los precios a pagar!</string>
    <string name="btCorrec">Son correctos</string>
    <string name="noCorrec">Cambiar precios</string>
    <string name="totalPrinceCancel">Total a pagar</string>
    <string name="noWhatsApp">Lo sentimos, no tienes instalado WhatsApp</string>
    <string name="install">"Ve a la Play Store y descarga WhatsApp "</string>
    <string name="message">"Escríbenos al WhatsApp de soporte 317 015 74 14"</string>
    <string name="playSore">Ir a Play Store</string>

    <!-- Calendar -->
    <string name="monday">L</string>
    <string name="tuesday">M</string>
    <string name="wednesday">M</string>
    <string name="thursday">J</string>
    <string name="friday">V</string>
    <string name="saturday">S</string>
    <string name="sunday">D</string>

</resources>